--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "games_festival",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "dev": "parcel ./index.html src/styles/main.scss src/scripts/main.js",
+    "build": "parcel build ./index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
